# DataLayering

./: CMakeLists.txt  CMakePresets.json  README.md
Applications/: CMakeLists.txt
Applications/GUI/: CMakeLists.txt
Libraries/: CMakeLists.txt
Libraries/DataClasses/: CMakeLists.txt
Libraries/DataClasses/include/: DataInterface.h  DataType.h  Datum.h  QuantityData.h
Libraries/DataClasses/source/: QuantityData.cpp
Libraries/DataClasses/tests/: CMakeLists.txt
Libraries/DataClasses/tests/source/: Datum_test.cpp  QuantityData_test.cpp
Libraries/Item/: CMakeLists.txt
Libraries/Item/include/: AbstractItem.h  Book.h
Libraries/Item/tests/: CMakeLists.txt
